# tax-etrade-esp

./: .gitignore  CHANGELOG.md  README.md  generate_charts.py  pyproject.toml  run_tax_engine.bat  run_tax_engine.command
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: CALCULATOR_GUIDE_EN.md  CALCULATOR_GUIDE_ES.md  DASHBOARD_GUIDE_EN.md  DASHBOARD_GUIDE_ES.md  TAX_CALCULATION_METHOD.md  TAX_CALCULATION_METHOD_ES.md  savings_income.example.json
docs/planning/: DASHBOARD_SCOPE_TABS_PLAN.md
src/tax_engine/: __init__.py  cli_demo.py  cli_main.py  cli_savings_income.py  dashboard_helpers.py  dividends_parser.py  download_all.py  ecb_rates.py  etrade_download_dividends.py  etrade_download_orders.py  etrade_download_rsu.py  market_data.py  models.py  report.py  revolut_parser.py  rsu_parser.py  sample_data.py  tax_engine.py
src/tax_engine/templates/: dashboard_template.html  report.html.j2
tests/: conftest.py  test_dashboard_customization.py  test_dividends_parser.py  test_ecb_rates.py  test_load_orders.py  test_market_data.py  test_portfolio.py  test_revolut_parser.py  test_savings_income_cli.py  test_savings_ledger.py  test_tax_engine.py
