[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tax-engine"
version = "0.1.0"
description = "Spanish Tax Engine for E-Trade RSUs and ESPP using FIFO Cost Basis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["tax", "spain", "espp", "rsu", "capital-gains", "fifo", "renta", "modelo-100"]
dependencies = [
    "certifi>=2024.0.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "playwright>=1.40.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "pandas-stubs>=2.2.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "types-requests>=2.32.0",
]

[project.scripts]
# CLI entry points (installed as global commands)
tax-engine = "tax_engine.cli_main:main"
tax-demo = "tax_engine.cli_demo:main"
tax-savings-income = "tax_engine.cli_savings_income:main"
tax-login = "tax_engine.etrade_login:login"
tax-download = "tax_engine.download_all:main"
tax-download-espp = "tax_engine.etrade_download_espp:download_benefit_history"
tax-download-orders = "tax_engine.etrade_download_orders:download_orders"
tax-download-rsu = "tax_engine.etrade_download_rsu:download_rsu_confirmations"
tax-download-dividends = "tax_engine.etrade_download_dividends:download_dividends"
tax-import-dividends = "tax_engine.dividends_parser:import_dividends"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship non-Python package data in built wheels: the typing marker and the HTML
# templates rendered at runtime (the PDF-report Jinja template and the dashboard).
tax_engine = ["py.typed", "templates/*.html", "templates/*.j2"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]  # Module level import not at top (sys.path manipulation)
"demo.py" = ["E402"]  # Module level import not at top (sys.path manipulation)
"generate_charts.py" = ["E402"]  # Module level import not at top (sys.path manipulation)

[tool.ruff.lint.isort]
known-first-party = ["tax_engine"]

[tool.mypy]
# Analyze against the minimum supported runtime (requires-python = ">=3.10") so
# accidental use of newer-only stdlib/typing is caught.
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "openpyxl.*",
    "playwright.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tax_engine.etrade_login"
# Playwright's new_context has complex overloaded types that don't work well with **kwargs
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "tests.*"
# Tests don't need strict typing - focus on runtime correctness
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disable_error_code = ["arg-type", "union-attr", "type-arg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tax_engine"]
branch = true
omit = [
    # Browser-automation download flows (Playwright/E*TRADE) aren't unit-tested.
    "*/etrade_login.py",
    "*/etrade_download_*.py",
    "*/download_all.py",
]

[tool.coverage.report]
show_missing = true
# Non-blocking for now: report coverage without failing CI. Raise this over time.
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
